--- a/index.html
+++ b/index.html
@@ -3,9 +3,105 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>40-IDUM</title>
+    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <title>40-IDUM Maktab Web Sahifasi</title>
   </head>
   <body>
-    <div class="container-fluid"></div>
+    <div class="container-fluid">
+      <header>
+        <div class="logo">
+          <h2><a href="./index.html">40</a></h2>
+        </div>
+
+        <div class="header__links">
+          <ul>
+            <li><a href="./pages/class.html">Sinflar Ro’yhati</a></li>
+            <li><a href="./pages/faq.html">Savollar</a></li>
+            <li><a href="./pages/about.html">Biz Haqimizda</a></li>
+            <li><a href="./pages/pupil.html">Faxri O’quvchilar</a></li>
+          </ul>
+        </div>
+
+        <div class="registration">
+          <p><a href="./pages/register.html">Ro’hatdan o’tish</a></p>
+        </div>
+      </header>
+
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active dots"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            class="dots"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/school.png" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>40-IDUM</h5>
+              <p>
+                Bu maktab 2010-chi yildan beri faoliyat yuritadi azizlar!
+                Maktabimizda juda ko’pgina sharoitlar yaratilgan. Hozirda 700
+                nafardan ziyod o’qivchilarimiz taqsil olishmoqda!!
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/sport.png" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>40-IDUM</h5>
+              <p>
+                Bu maktab 2010-chi yildan beri faoliyat yuritadi azizlar!
+                Maktabimizda juda ko’pgina sharoitlar yaratilgan. Hozirda 700
+                nafardan ziyod o’qivchilarimiz taqsil olishmoqda!!
+              </p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
