adding new files hahahaha ^_^

--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@
           <p><a href="./register.html">Ro’hatdan o’tish</a></p>
         </div>
       </header>
-      <h1>Ro’hatdan O’tish</h1>
+      <h1>Kirish</h1>
     </div>
   </body>
 </html>
