--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       <hr>
 
-      <p class="copyright">copyright © by <a href="40idum.uz">40idum.uz</a></p>
+      <p class="copyright">copyright © by <a href="https://www.40idum.uz">40idum.uz</a></p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
